--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <div id="content">我是測試區塊</div>
 
 
+    <h1>JSON</h1>
+    <img src="https://images.unsplash.com/photo-1497339100210-9e87df79c218?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="">
+    <div id="product">產品名稱</div>
+    <div id="price">產品價格</div>
 
 
-
-    <script src="./AJAX.js"></script>
+    <script src="./main.js"></script>
 </body>
+
 </html>
